--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+/* Global styles */
 * {
   margin: 0;
   padding: 0;
@@ -6,13 +7,14 @@
 
 :root {
   --heading-font: "PT Sans", sans-serif;
-  --body-font: "Raleway", sans-serif;
+  --body-font: "Open Sans", sans-serif;
   --oswald-font: "Oswald", sans-serif;
   --green-color: #0d9583;
   --yellow-color: #ffbb00;
   --red-color: #fb6542;
   --blue-color: #375e97;
   --primary-color: #333;
+  --overlay-color: rgba(0, 0, 0, 0.7);
 }
 
 body {
@@ -33,6 +35,7 @@ h4,
 h5,
 h6 {
   line-height: 1.3;
+  font-family: var(--heading-font);
 }
 
 a {
@@ -47,4 +50,157 @@ img {
 
 ul {
   list-style: none;
+}
+
+/* Header stylings */
+
+.container {
+  max-width: 1100px;
+  margin: auto;
+  overflow: hidden;
+  padding: 0 2rem;
+}
+
+#navbar {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+#header-img {
+  width: 250px;
+  height: 100px;
+}
+
+.nav-items {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-link {
+  padding: 0 1rem;
+  margin-right: 0.625rem;
+  font-family: var(--oswald-font);
+  font-size: 1.2rem;
+}
+
+.nav-link:hover {
+  color: #444;
+}
+
+.button-secondary:last-child:hover {
+  background: var(--yellow-color);
+  color: var(--primary-color);
+  transition: background 0.5s;
+}
+
+/* Global buttons */
+
+.button {
+  border: none;
+  outline: none;
+  font-weight: 500;
+  text-decoration: none;
+  text-align: center;
+  border-radius: 2rem;
+  padding: 0.6rem 3.5rem;
+}
+
+.button-highlight {
+  background: var(--red-color);
+  display: inline-block;
+  opacity: 0.9;
+  font-weight: 800;
+  color: #fff;
+  font-size: 1.125rem;
+}
+
+.button-highlight:hover {
+  background: var(--green-color);
+  transition: 300ms ease-in;
+}
+
+.button-secondary {
+  background: var(--red-color);
+  color: #fff;
+}
+
+.btn-small {
+  padding: 0.3rem 1.5rem;
+}
+.button-large {
+  padding: 1rem 5rem;
+}
+/* Global buttons ends */
+
+/* Showcase Area Styles */
+
+.showcase .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
+  align-items: center;
+  justify-content: center;
+}
+
+.showcase h2 {
+  font-size: 4rem;
+  text-shadow: 1px 1px 1p var(--blue-color);
+  color: var(--primary-color);
+}
+
+.showcase h2 {
+}
+
+.showcase p {
+  margin: 1rem 0;
+}
+
+/* Specifications */
+
+.specifications {
+  margin-top: 3rem;
+  position: relative;
+  background: url("../images/overlay-dark.jpg") no-repeat bottom center/cover;
+  height: 37.5em;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%; /* height and width set to 100% so it covers entire bg */
+  background-color: var(--overlay-color);
+}
+
+.spec-inner {
+  color: #fff;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  margin: auto;
+  max-width: 860px;
+  padding: 3rem 0;
+}
+
+.spec-inner h3 {
+  font-size: 3.5rem;
+  margin-bottom: 0.625rem;
+  text-align: center;
+}
+
+.spec-list li {
+  text-align: justify;
+  line-height: 2.5;
+  padding: 0 1rem;
+}
+
+.spec-list li strong {
+  margin-right: 0.625rem;
+  text-transform: uppercase;
+  color: var(--red-color);
 }
