--- a/css/main.css
+++ b/css/main.css
@@ -204,3 +204,25 @@ ul {
   text-transform: uppercase;
   color: var(--red-color);
 }
+
+/* Gallery Section */
+
+.product-gallery .gallery {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+}
+
+.product-gallery .gallery a:first-child {
+  grid-row: 1/3;
+  grid-column: 1/3;
+}
+
+.product-gallery .gallery a:nth-child(2) {
+  grid-column: 3/5;
+}
+
+.product-gallery .gallery img,
+.product-gallery a {
+  width: 100%;
+  height: 100%;
+}
