--- a/css/main.css
+++ b/css/main.css
@@ -13,8 +13,10 @@
   --yellow-color: #ffbb00;
   --red-color: #fb6542;
   --blue-color: #375e97;
+  --dark-grey: #3f3d4e;
   --primary-color: #333;
   --overlay-color: rgba(0, 0, 0, 0.7);
+  --contact-bg: #f2f1f8;
 }
 
 body {
@@ -22,6 +24,7 @@ body {
   font-size: 100%;
   line-height: 1.6;
   color: var(--primary-color);
+  -webkit-font-smoothing: antialiased;
 }
 
 p {
@@ -149,9 +152,6 @@ ul {
   color: var(--primary-color);
 }
 
-.showcase h2 {
-}
-
 .showcase p {
   margin: 1rem 0;
 }
@@ -226,4 +226,24 @@ ul {
 .product-gallery a {
   width: 100%;
   height: 100%;
+}
+
+/* About us */
+.review h3 {
+  text-align: center;
+  font-size: 3.5rem;
+  padding: 1.5rem 0;
+  margin: 1rem 0;
+  color: #fff;
+}
+.review {
+  background: var(--dark-grey);
+  padding: 3rem 1rem;
+}
+
+.review .container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 3rem;
+  max-width: 100%;
 }
