finished with footer section

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   --oswald-font: "Oswald", sans-serif;
   --green-color: #0d9583;
   --yellow-color: #ffbb00;
-  --red-color: #fb6542;
+  --red-color: #e30201;
   --blue-color: #375e97;
   --dark-grey: #3f3d4e;
   --primary-color: #333;
@@ -88,7 +88,8 @@ ul {
 }
 
 .nav-link:hover {
-  color: #444;
+  color: var(--yellow-color);
+  transition: 400ms ease-in-out;
 }
 
 .button-secondary:last-child:hover {
@@ -246,4 +247,106 @@ ul {
   grid-template-columns: repeat(2, 1fr);
   grid-gap: 3rem;
   max-width: 100%;
+}
+
+/* Footer */
+
+/* footer section */
+
+.section-footer {
+  padding: 4rem 0;
+  color: #fff;
+  background: var(--primary-color);
+}
+
+.section-footer .container {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-gap: 1rem;
+}
+
+.section-footer h3 {
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+}
+
+.section-footer a {
+  line-height: 1.9;
+  color: #ccc;
+}
+
+.section-footer a:hover {
+  color: var(--green-color);
+}
+
+.section-footer a > i {
+  color: #555;
+  margin-right: 0.5rem;
+}
+
+.section-footer a > i:hover {
+  color: var(--green-color);
+}
+
+.email-form {
+  width: 100%;
+  display: inline-block;
+  background: #555;
+  border-radius: 20px;
+  position: relative;
+  line-height: 0;
+  margin-top: 1rem;
+}
+
+.email-form .form-control {
+  display: inline-block;
+  border: 0;
+  outline: 0;
+  color: #ddd;
+  font-size: 1rem;
+  background: transparent;
+  font-family: inherit;
+  padding: 0 3rem 0 1.5rem;
+  height: 45px;
+  border-radius: 20px;
+}
+
+.email-form .submit {
+  display: inline-block;
+  position: absolute;
+  border: 0;
+  top: 0;
+  right: 0;
+  outline: 0;
+  width: 45px;
+  height: 45px;
+  margin: 0;
+  background: var(--green-color);
+  color: #333;
+  text-align: center;
+  padding: 0;
+  font-size: 1rem;
+  cursor: pointer;
+  border-radius: 0 20px 20px 0px;
+}
+
+#submit i {
+  color: #fff;
+}
+/* utility classes  */
+
+.btn {
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.5rem 2.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  border-radius: 25px;
+}
+
+.btn:hover {
+  background-color: var(--secondary-color);
 }
