--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,8 @@ ul {
 #navbar {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  padding-bottom: 1rem 0;
+  margin-bottom: 3rem;
 }
 
 #header-img {
@@ -135,6 +137,22 @@ ul {
 .button-large {
   padding: 1rem 5rem;
 }
+
+.btn {
+  display: inline-block;
+  background: var(--primary-color);
+  color: #fff;
+  padding: 0.5rem 2.5rem;
+  border: none;
+  cursor: pointer;
+  font-size: 1.1rem;
+  border-radius: 25px;
+}
+
+.btn:hover {
+  background-color: var(--secondary-color);
+}
+
 /* Global buttons ends */
 
 /* Showcase Area Styles */
@@ -229,7 +247,7 @@ ul {
   height: 100%;
 }
 
-/* About us */
+/* Product Review */
 .review h3 {
   text-align: center;
   font-size: 3.5rem;
@@ -334,19 +352,123 @@ ul {
 #submit i {
   color: #fff;
 }
-/* utility classes  */
 
-.btn {
-  display: inline-block;
-  background: var(--primary-color);
-  color: #fff;
-  padding: 0.5rem 2.5rem;
-  border: none;
-  cursor: pointer;
-  font-size: 1.1rem;
-  border-radius: 25px;
+/* Media Queries */
+
+@media screen and (max-width: 800px) {
+  .section-footer .container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .section-footer h3 {
+    font-size: 1.2rem;
+  }
 }
 
-.btn:hover {
-  background-color: var(--secondary-color);
+@media screen and (max-width: 650px) {
+  .section-footer .container {
+    grid-template-columns: 1fr 1fr;
+    text-align: center;
+  }
+
+  .product-gallery .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+
+  .product-gallery .gallery a:first-child {
+    grid-row: 1/1;
+    grid-column: 1/1;
+  }
+  .product-gallery .gallery a:nth-child(2) {
+    grid-row: 2/2;
+    grid-column: 2/4;
+  }
+
+  .showcase .container {
+    grid-template-columns: 1fr;
+  }
+
+  .showcase .container div:first-child {
+    order: 2;
+  }
+  .showcase .container div:last-child {
+    order: 1;
+  }
+
+  .showcase img {
+    width: 100%;
+  }
+
+  .showcase h2 {
+    font-size: 3rem;
+    text-align: left;
+  }
+
+  .review .container {
+    grid-template-columns: 1fr;
+  }
+
+  .review h3 {
+    font-size: 2.5rem;
+  }
+
+  .spec-inner {
+    margin: auto;
+    padding: 0 1rem;
+  }
+
+  .spec-inner h3 {
+    font-size: 2.5rem;
+    margin-bottom: 0.625rem;
+    padding: 1rem 0;
+    text-align: center;
+  }
+
+  .spec-list li {
+    text-align: justify;
+    font-size: 0.875rem;
+    line-height: 1.6;
+    padding: 0.3125 1rem;
+    font-weight: 500;
+  }
+
+  #navbar {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .nav-items {
+    display: flex;
+    flex-flow: row wrap;
+    text-align: center;
+  }
+
+  .nav-link {
+    padding: 0 1rem;
+    margin-right: 0.625rem;
+    font-family: var(--oswald-font);
+    font-size: 1.2rem;
+  }
+}
+
+@media screen and (max-width: 560px) {
+  .section-footer .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+  }
+
+  .section-footer h3 {
+    font-size: 1.4rem;
+    font-weight: 400;
+    margin: 1rem 0;
+  }
+
+  .section-footer a {
+    font-size: 1.2rem;
+    line-height: 1.5;
+  }
 }
