--- a/css/main.css
+++ b/css/main.css
@@ -84,7 +84,7 @@ ul {
 
 #header-img {
   width: 350px;
-  height: auto;
+  height: 100px;
 }
 
 .nav-items {
@@ -256,6 +256,11 @@ ul {
 .product-gallery a {
   width: 100%;
   height: 100%;
+}
+
+.product-gallery .gallery a:hover {
+  opacity: 0.9;
+  transition: 1.5s;
 }
 
 /* Product Review */
