--- a/css/main.css
+++ b/css/main.css
@@ -243,6 +243,10 @@ ul {
   grid-template-columns: repeat(5, 1fr);
 }
 
+.product-gallery h3 {
+  display: none;
+}
+
 .product-gallery .gallery a:first-child {
   grid-row: 1/3;
   grid-column: 1/3;
@@ -294,6 +298,7 @@ ul {
   height: 100%;
   width: 100%;
   position: absolute;
+  border: none;
 }
 
 /* Footer */
