fix css validation errror but variables still produces errors

--- a/css/main.css
+++ b/css/main.css
@@ -448,7 +448,7 @@ ul {
     text-align: justify;
     font-size: 0.875rem;
     line-height: 1.6;
-    padding: 0.3125 1rem;
+    padding: 0.3125rem 1rem;
     font-weight: 500;
   }
 
