--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,3 @@
-/* Global styles */
 * {
   margin: 0;
   padding: 0;
@@ -12,11 +11,9 @@
   --green-color: #0d9583;
   --yellow-color: #ffbb00;
   --red-color: #e30201;
-  --blue-color: #375e97;
   --dark-grey: #3f3d4e;
   --primary-color: #333;
   --overlay-color: rgba(0, 0, 0, 0.7);
-  --contact-bg: #f2f1f8;
 }
 
 html {
@@ -59,8 +56,6 @@ img {
 ul {
   list-style: none;
 }
-
-/* Header stylings */
 
 .container {
   max-width: 1100px;
@@ -111,8 +106,6 @@ ul {
   transition: background 0.5s;
 }
 
-/* Global buttons */
-
 .button {
   border: none;
   outline: none;
@@ -149,25 +142,6 @@ ul {
   padding: 1rem 5rem;
 }
 
-/* .btn {
-  display: inline-block;
-  background: var(--primary-color);
-  color: #fff;
-  padding: 0.5rem 2.5rem;
-  border: none;
-  cursor: pointer;
-  font-size: 1.1rem;
-  border-radius: 25px;
-}
-
-.btn:hover {
-  background-color: var(--secondary-color);
-} */
-
-/* Global buttons ends */
-
-/* Showcase Area Styles */
-
 .showcase .container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -186,8 +160,6 @@ ul {
   margin: 1rem 0;
 }
 
-/* Specifications */
-
 .specifications {
   margin-top: 3rem;
   position: relative;
@@ -201,7 +173,7 @@ ul {
   top: 0;
   left: 0;
   height: 100%;
-  width: 100%; /* height and width set to 100% so it covers entire bg */
+  width: 100%;
   background-color: var(--overlay-color);
 }
 
@@ -236,8 +208,6 @@ ul {
   color: var(--red-color);
 }
 
-/* Gallery Section */
-
 .product-gallery .gallery {
   display: grid;
   grid-template-columns: repeat(5, 1fr);
@@ -267,7 +237,6 @@ ul {
   transition: 1.5s;
 }
 
-/* Product Review */
 .review h3 {
   text-align: center;
   font-size: 3.5rem;
@@ -300,10 +269,6 @@ ul {
   position: absolute;
   border: none;
 }
-
-/* Footer */
-
-/* footer section */
 
 .section-footer {
   padding: 4rem 0;
@@ -369,7 +334,6 @@ ul {
   background: var(--yellow-color);
   cursor: pointer;
 }
-/* Media Queries */
 
 @media screen and (max-width: 800px) {
   .section-footer .container {
